# as-chatbot-poc

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  bun.lockb  docker-compose.yml  package-lock.json  package.json
api/: package.json
api/app/clients/prompts/: artifacts.js
api/server/controllers/agents/: client.js  request.js
api/server/services/Endpoints/google/: build.js
api/server/services/faq/: README.md  createIndex.js  embeddings.js  index.js  qdrant.js  sync.js  syncScript.js
chatbot-mcp/: Dockerfile.librechat  docker-compose.yml
chatbot-mcp/mcp-server/: .env.example  .gitignore  Dockerfile  package.json  pyproject.toml  requirements.txt
chatbot-mcp/mcp-server/src/: __init__.py  api_client.py  config.py  formatters.py  main.py  search.py  tools.py
client/: index.html
client/src/: style.css
client/src/components/Chat/: ChatView.tsx  Header.tsx  HeroSection.tsx  Landing.tsx
client/src/components/Chat/Messages/Content/: AIResponse.tsx  Container.tsx  MessageContent.tsx  SearchContent.tsx
client/src/components/Chat/Messages/Content/Parts/: Text.tsx
client/src/components/Chat/Messages/ui/: MessageRender.tsx
client/src/components/Conversations/: Convo.tsx  ConvoLink.tsx
client/src/components/Nav/: Nav.tsx  NewChat.tsx  SearchBar.tsx  SidebarHeader.tsx
config/: calculate-token-usage.js
helm/librechat/: Chart.yaml
